# orange-snom

./: .coveragerc  .gitignore  README.md  README.pypi  setup.cfg  tox.ini
.github/workflows/: release.yml  test.yml
conda/: meta.yaml
orangecontrib/snom/model/: snompy.py
orangecontrib/snom/preprocess/: __init__.py  phase_unwrap.py  utils.py
orangecontrib/snom/temp/: __init__.py
orangecontrib/snom/tests/: __init__.py  snompy_examples.py  test_preprocess.py  test_snompy.py
orangecontrib/snom/widgets/: __init__.py  owhellosnom.py  owhellospectroscopy.py  owpreprocessimage.py  owsnompy.py  snompy_compute.py  snompy_util.py
orangecontrib/snom/widgets/preprocessors/: __init__.py  background_fit.py  linelevel.py  multiply.py  phase_rotation.py  phase_unwrap.py  registration_example.py  registry.py  self_reference.py  simple_normalize.py  utils.py
orangecontrib/snom/widgets/tests/: test_owhello.py  test_owpreprocessimage.py
