[metadata]
name = Orange-SNOM
author = Canadian Light Source, Biolab UL, Soleil
author_email = info@biolab.si
maintainer = Marko Toplak
url = https://github.com/quasars/orange-snom
project_urls =
    Bug Tracker = https://github.com/quasars/orange-snom/issues
    Source Code = https://github.com/quasars/orange-snom
documentation_name = SNOM
description = SNOM add-on for Orange data mining software package.
long_description = file: README.md
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
license = GPL3+
license_file = LICENSE

[options]
namespace_packages = orangecontrib
zip_safe = False
include_package_data = True
python_requires = >=3.10
packages = find:
setup_requires =
    setuptools>=42.0
    setuptools-scm
install_requires =
    Orange3>=3.34.0
    orange-spectroscopy>=0.7.0
    numpy>=1.21.0,<2.0.0
    pySNOM>=0.1.0


[options.extras_require]
doc =
	sphinx
	recommonmark
	sphinx_rtd_theme
test =
    pytest
    coverage
    flake8
    flake8-bugbear
    black

[options.entry_points]
orange3.addon =
	snom=orangecontrib.snom
orange.widgets =
    SNOM=orangecontrib.snom.widgets
orange.canvas.help =
    html-index=orangecontrib.snom.widgets:WIDGET_HELP_PATH

[flake8]
# Black compatibility
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # Ignore this since we use PyQt5 basically everywhere.
    N802,
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
    E501
extend-select =
    B950,
ignore-names =
    settingsHandler
